# f1-strategy-intelligence-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  .vercelignore  Dockerfile  pyproject.toml  requirements.full.txt  requirements.txt  requirements.vercel.txt  run_build_features.py  run_ingestion.py  run_train_model.py  vercel.json
backend/api/: index.py
backend/app/: config.py  full_app.py  main.py  main_lite.py
backend/app/api/: lite_routes.py  routes.py
backend/app/models/: schemas.py
backend/app/services/: feature_engineering.py  ingestion.py  inventory.py  metadata.py  model_training.py  storage.py  strategy_simulation.py
docs/: architecture.md  phase_report.md  portfolio.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: MediaExplorer.tsx  StrategySimulator.tsx  layout.tsx  page.tsx  styles.css
frontend/app/api/wiki/: route.ts
frontend/app/drivers/[code]/: page.tsx
frontend/app/teams/[name]/: page.tsx
pipelines/features/: build_lap_features.py
pipelines/ingestion/: ingest_season.py  ingest_telemetry.py
scripts/: verify_environment.py
